--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
         daButton.addEventListener('click', evt => {
             const value = daInput.value
             console.log('json', JSON.stringify({input: value}))
-            fetch("/rays",
+            fetch("/proof",
                 {
                     method: "POST",
                     body: JSON.stringify({input: value}),
