react redux groundwork

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Convergence</title>
-    <!-- <script src="bundle.js" defer></script> -->
+    <script src="bundle.js" defer></script>
     
     <style>
         body{
@@ -41,7 +41,7 @@
         </button>
     </div>
   <div id="app"></div>
-  <script defer>
+  <!-- <script defer>
         const daButton = document.getElementById("submit-button")
         const daInput = document.getElementById("human-input")
         const daHumanWord = document.getElementById("daHumanWord")
@@ -68,6 +68,6 @@
                 daMachineWord.textContent = selectedWord 
             })
         })
-    </script>
+    </script> -->
 </body>
 </html>
