different color scheme

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,14 @@
             width: 100%;
             z-index: 20;
         }
+
+        .center-action-button {
+            display: block;
+            margin: auto;
+            width: 100px;
+            height: 24px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
