more components and better vibe

--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Convergence</title>
     <script src="bundle.js" defer></script>
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     
     <style>
         body{
             font-size: 16px;
             position: relative;
             margin: 0px;
+            font-size: 16px;
         }
+
+        a{
+            text-decoration: none;
+        }
+
+        h1{
+            font-size: 4rem;
+        }
+
         h1, h2 {
             text-align: center;
+            font-family: 'Josefin Sans', sans-serif;
+            color: rgb(248, 245, 237)
         }
 
         h1#title {
@@ -28,11 +41,20 @@
         }
 
         .center-action-button {
+            border-radius: 20px;
+            color: white;
+            background-color: rgb(27, 27, 27);
             display: block;
             margin: auto;
-            width: 100px;
-            height: 24px;
+            width: 200px;
+            height: 32px;
             cursor: pointer;
+            border: none;
+            font-size: 1rem;
+        }
+
+        .center-action-button:hover {
+            color: orange;
         }
     </style>
 </head>
