--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Convergence</title>
     <script src="bundle.js" defer></script>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 
     <style>
@@ -59,6 +60,28 @@
     }
 
     .center-action-button:hover {
+      color: orange;
+    }
+
+    #user-guess-form{
+      display: block;
+      margin: auto;
+    }
+
+    .tutorial-slide {
+      background-color: rgba(34, 26, 26, 0.8);
+      border-radius: 20px;
+      padding: 2rem;
+      color: white;
+      height: 300px;
+      width: 700px;
+      margin: auto;
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%)
+    }
+
+    .tutorial-slide h2{
       color: orange;
     }
   </style>
