fish visualization MVP

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,10 @@
       color:rgb(141, 132, 142);
     }
 
+    .page-title{
+      padding: 2rem;
+    }
+
     div.overlay {
       position: absolute;
       height: 100%;
@@ -160,7 +164,11 @@
       padding-top: 1rem;
     }
 
-    
+    #canvas-wrapper {
+      margin-top: 2rem;
+      height: 70vh;
+      width: 100vw;
+    }
   </style>
 </head>
 <body>
