--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Convergence</title>
     <script src="bundle.js" defer></script>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rubik|Roboto" rel="stylesheet">
 
     <style>
     body{
@@ -14,6 +14,7 @@
       font-size: 16px;
       margin: 0px;
       font-size: 16px;
+      font-family: 'Roboto', sans-serif;
     }
 
     a{
@@ -22,7 +23,7 @@
 
     h1, h2 {
       text-align: center;
-      font-family: 'Josefin Sans', sans-serif;
+      font-family: 'Rubik', sans-serif;
       color: rgb(248, 245, 237)
     }
 
