handles garbage words

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,6 @@
     }
 
     #landing-page-info{
-      height: 300px;
       width: 100%;
       margin: auto;
       position: relative;
@@ -144,12 +143,11 @@
       color: rgb(248, 227, 187);
     }
 
-    div.game-setup{
+    div#game-setup{
       background-color: rgba(34, 26, 26, 0.8);
       border-radius: 20px;
       padding: 2rem;
       color: white;
-      height: 300px;
       width: 700px;
       margin: auto;
       position: relative;
@@ -159,6 +157,19 @@
 
     .game-setup-form{
       padding: 1rem;
+    }
+
+    #error-component {
+      width: 100%;
+      position: absolute;
+      top: 70%;
+      margin: auto;
+    }
+
+    #error-component .ui.warning.form {
+      display: block;
+      width: 700px;
+      margin: auto;
     }
 
     #first-word-form-subsection {
