--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Convergence</title>
-    <script src="bundle.js" defer></script>
+    <script src="/bundle.js" defer></script>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
     <link href="https://fonts.googleapis.com/css?family=Rubik|Roboto" rel="stylesheet">
 
@@ -104,7 +104,7 @@
     #user-guess-form{
       display: block;
       margin: 0px auto;
-      padding: 2rem;  
+      padding: 2rem;
     }
 
     #user-guess-form button, #first-word-form-subsection button {
