committing games table front end stuff

--- a/public/index.html
+++ b/public/index.html
@@ -129,6 +129,10 @@
       transform: translateY(-50%)
     }
 
+    .history-table {
+      position: relative;
+    }
+
 
     .tutorial-slide h2, #game-setup h2{
       color: orange;
