--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
       background-color: rgb(141, 132, 142);
       color: white;
       display: block;
-      margin: 2rem auto;
+      margin: 3rem auto;
       width: 200px;
       cursor: pointer;
       border: none;
@@ -280,7 +280,7 @@
       font-weight: 400;
       font-family: 'Roboto', sans-serif;
       letter-spacing: 1px;
-
+      border-radius: 0.5rem;
     }
 
     @keyframes winning {
