--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,6 @@
       height: 100%;
       font-size: 16px;
       margin: 0px;
-      font-size: 16px;
       font-family: 'Roboto', sans-serif;
     }
 
@@ -300,6 +299,11 @@
 .ui.button.end-buttons:hover {
   background-color: rgb(84, 79, 90);
       color: rgb(248, 227, 187);
+}
+
+/*MOBILE ONLY */
+#landing-page-info h1 img {
+  width: 20rem;
 }
   </style>
 </head>
