--- a/public/index.html
+++ b/public/index.html
@@ -422,6 +422,12 @@
   .game-over-info h4, .game-over-info button {
     font-size: 1.25rem;
   }
+
+  .mobile-background {
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(#C9D2F2, #F9D9EA, #F7D091);
+  }
 }
   </style>
 </head>
